--- a/playpart.html
+++ b/playpart.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <title>My Playpart</title>
+        <link rel="css" href="ibsen.css">
     </head>
     <body>
         <h1>Sumanth Yeruva acts in a play</h1>
