--- a/playpart.html
+++ b/playpart.html
@@ -86,6 +86,26 @@
         <div class="speech">
             <p>Now, Nils, let us have a talk.</p>
         </div>
+
+        <div class="table">
+            <table>
+                <tr>
+                    <th>Character</th>
+                    <th>Actor</th>
+                    <th>Understudy</th>
+                </tr>
+                <tr>
+                    <td>lenda</td>
+                    <td>sam</td>
+                    <td>---</td>
+                </tr>
+                <tr>
+                    <td>Krogstad</td>
+                    <td>Nani</td>
+                    <td>---</td>
+                </tr>
+            </table>
+        </div>
         
         
     </body>
