--- a/playpart.html
+++ b/playpart.html
@@ -105,7 +105,9 @@
                     <td>---</td>
                 </tr>
             </table>
-        </div>
+        </div><br>
+        <a href="file:///C:/Users/S567115/Desktop/web%20apps%20repos/44563-webapps-f23-assignment4-sumanthyeruva/secondact.html">Link to secondact</a>
+
         
         
     </body>
