--- a/secondact.html
+++ b/secondact.html
@@ -3,20 +3,25 @@
     <head>
         <title>A smidgeon more</title>
         <link href="ibsen.css" rel="stylesheet">
+        <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
     </head>
 <body>
+    
+
+    <i class="material-icons">cloud</i>
     <div class="krogstad">
         <h6>KROGSTAD.</h6></div>
     <div class="speech">
         <p>Can we two have anything to talk about?</p>
     </div>
-
+    <i class="material-icons">cloud</i>
 <div class="linde">
 <h6>MRS LINDE.</h6></div>
 <div class ="speech">
     <p>We have a great deal to talk about.</p>
 </div>
 
+<i class="material-icons">cloud</i>
 <div class="krogstad">
     <h6>KROGSTAD.</h6>
 </div>
@@ -25,5 +30,21 @@
 </div>
 <br>
 <a href="file:///C:/Users/S567115/Desktop/web%20apps%20repos/44563-webapps-f23-assignment4-sumanthyeruva/playpart.html">Link back to playpart</a>
+<br>
+<br>
+<img src="file:///C:/Users/S567115/Pictures/Saved%20Pictures/css%20image.jpg" alt="CSS image">
+<footer>
+    <footer>
+        <div class="navbar">
+        <a class="active" href="file:///C:/Users/S567115/Desktop/web%20apps%20repos/44563-webapps-f23-assignment4-sumanthyeruva/playpart.html">Playpart</a>
+        <a href="file:///C:/Users/S567115/Desktop/web%20apps%20repos/44563-webapps-f23-assignment4-sumanthyeruva/secondact.html">Secondact</a>
+        </div>
+        <br>
+        <br>
+        <br>
+        
+    </footer>
+</footer>
+<br>
 </body>
 </html>
